crates/dexo-tui/tests/snapshots/sprint14_screens__mcp_audit_full.snap
---
source: crates/dexo-tui/tests/sprint14_screens.rs
expression: "render_to_string(&model, 160, 50)"
---
default  no connection  —                                                                                                                                       
┌  Sidebar─────────────────┐ scratch.sql ×  +                                                                                                                   
│[n]ew [e]dit [a]ctions    │┌▸ SQL · scratch.sql───────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│No connections — press n  ││   1                                                                                                                              │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││               ┌MCP profiles──────────────────────────────────────────────────────────┐                                           │
│                          ││               │mcp profile=assistant enabled=false confirm=false                     │                                           │
│                          ││ ┌Agent activity────────────────────────────────────────────────────────────────────────────────────┐                             │
│                          ││ │No agent's write is waiting for approval.                                                         │                             │
│                          ││ │                                                                                                  │                             │
│                          ││ │Recent activity                                                                                   │                             │
│                          ││ │  assistant tools/call catalog_search allow db.public.items                                       │                             │
│                          ││ │a approve  d deny  up/down pick  PgDn scroll  r revoke all grants  esc close                      │                             │
│                          ││ └──────────────────────────────────────────────────────────────────────────────────────────────────┘                             │
│                          ││               │enable requires local confirmation                                    │                                           │
│                          ││               │e enable/disable  g new grant  r revoke  R revoke all  esc close      │                                           │
│                          ││               │                                                                      │                                           │
│                          ││               │                                                                      │                                           │
│                          ││               └──────────────────────────────────────────────────────────────────────┘                                           │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          │└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
│                          │┌  Results─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                          ││[Grid] Explain  Messages                                                                                                          │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
└──────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
disconnected  Ctrl+Enter run  Ctrl+N new sql  Ctrl+W close                                                                                            Ctrl+P  F1
