crates/dexo-tui/tests/snapshots/sprint14_screens__mcp_nocolor.snap
---
source: crates/dexo-tui/tests/sprint14_screens.rs
assertion_line: 42
expression: "render_to_string(&model, 100, 30)"
---
default  no connection  -                                                                           
┌  Sidebar─────────────────┐ scratch.sql x  +                                                       
│[n]ew [e]dit [a]ctions    │┌> SQL - scratch.sql───────────────────────────────────────────────────┐
│No connections - press n  ││   1                                                                  │
┌MCP profiles──────────────────────────────────────────────────────────────────────────────────────┐
│> assistant  disabled  1 grant                                                                    │
│                                                                                                  │
│assistant is disabled: agents cannot use it yet.                                                  │
│Connections: local                                                                                │
│Reads: structured tools only                                                                      │
│Objects it can see: db.public.*                                                                   │
│  never: db.public.secrets                                                                        │
│Tools set by hand: catalog_search, object_describe                                                │
│Grants (1): agents may write while they last                                                      │
│  data_insert on db.public.items (local): one write, then it is spent, ends in 15 min             │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│e enable/disable  g new grant  r revoke grants  R revoke all  x delete  Up/Down pick  PgUp/PgDn   │
│details  Esc close                                                                                │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
