crates/dexo-tui/tests/snapshots/sprint14_screens__mcp_revoke_all.snap
---
source: crates/dexo-tui/tests/sprint14_screens.rs
expression: "render_to_string(&model, 160, 50)"
---
 Workbench  Connections [Agents] Server  Compare  History   default  no connection  —                                                                           
 1 Approvals   2 Activity  [3 Profiles]  4 Setup                                                                                                                
┌▸ Profiles (1)───────────────────────────────────────────────────┐┌  assistant────────────────────────────────────────────────────────────────────────────────┐
│ [n New]                                                         ││ [e Enable]  [c Connections…]  [q Read SQL on]  [g Grant…]  [r Revoke grants]  [x Delete]  │
│                                                                 ││                                                                                           │
│> ○ assistant  1 conn    browse    1 grant                       ││ State        disabled                                                                     │
│                                                                 ││ Connections  local                                                                        │
│                                                                 ││ Access       browse and describe only                                                     │
│                                                                 ││ Sees         db.public.*                                                                  │
│                                                                 ││ Never        db.public.secrets                                                            │
│                                                                 ││ Tools        catalog_search, object_describe                                              │
│                                                                 ││ ── Grants                                                                                 │
│                                                                 ││ data_insert on db.public.items (local): one write, then it is spent, ends in 15 min       │
│                                                                 ││                                                                                           │
│                                                                 ││                                                                                           │
│                                                                 ││                                                                                           │
│                                                                 ││                                                                                           │
│                                                                 ││                                                                                           │
│                                                                 ││                                                                                           │
│                                                                 ││                                                                                           │
│                                                                 ││                                                                                           │
│                                                                 ││                                                                                           │
│                                                                 ││                                                                                           │
│                                                                 ││                                                                                           │
│                                                                 ││                                                                                           │
│                                                                 ││                                                                                           │
│                                                                 ││                                                                                           │
│                                                                 ││                                                                                           │
│                                                                 ││                                                                                           │
│                                                                 ││                                                                                           │
│                                                                 ││                                                                                           │
│                                                                 ││                                                                                           │
│                                                                 ││                                                                                           │
│                                                                 ││                                                                                           │
│                                                                 ││                                                                                           │
│                                                                 ││                                                                                           │
│                                                                 ││                                                                                           │
│                                                                 ││                                                                                           │
│                                                                 ││                                                                                           │
│                                                                 ││                                                                                           │
│                                                                 ││                                                                                           │
│                                                                 ││                                                                                           │
│                                                                 ││                                                                                           │
│                                                                 ││                                                                                           │
│                                                                 ││                                                                                           │
│                                                                 ││                                                                                           │
│                                                                 ││                                                                                           │
│                                                                 ││                                                                                           │
└─────────────────────────────────────────────────────────────────┘└───────────────────────────────────────────────────────────────────────────────────────────┘
Agents  Up/Down pick  R revoke all  PgUp/PgDn read  1-4 views  Esc back                                                                               Ctrl+P  F1
