crates/dexo-tui/tests/snapshots/sprint14_screens__recovery_compact.snap
---
source: crates/dexo-tui/tests/sprint14_screens.rs
assertion_line: 26
expression: "render_to_string(&model, 60, 20)"
---
default  no connection  —    1 Sidebar  [2 SQL]  3 Results  
 scratch.sql ×  +                                           
┌▸ SQL · scratch.sql───────────────────────────────────────┐
┌Session recovery──────────────────────────────────────────┐
│Dexo closed unexpectedly and kept these unsaved documents:│
│  scratch.sql                                             │
│A transaction was open: its state is unknown.             │
│                                                          │
│Keep leaves them open; Discard closes them.               │
│ [Keep]   [Discard]                                       │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
disconnected                                      Ctrl+P  F1
