crates/dexo-tui/tests/snapshots/sprint14_screens__recovery_full.snap
---
source: crates/dexo-tui/tests/sprint14_screens.rs
expression: "render_to_string(&model, 160, 50)"
---
default  no connection  —                                                                                                                                       
┌  Sidebar─────────────────┐ scratch.sql ×  +                                                                                                                   
│[n]ew [e]dit [a]ctions    │┌▸ SQL · scratch.sql───────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│No connections — press n  ││   1                                                                                                                              │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                   ┌Session recovery──────────────────────────────────────────────┐                                               │
│                          ││                   │Dexo closed unexpectedly and kept these unsaved documents:    │                                               │
│                          ││                   │  scratch.sql                                                 │                                               │
│                          ││                   │A transaction was open: its state is unknown.                 │                                               │
│                          ││                   │                                                              │                                               │
│                          ││                   │Keep leaves them open; Discard closes them.                   │                                               │
│                          ││                   │ [Keep]   [Discard]                                           │                                               │
│                          ││                   │                                                              │                                               │
│                          ││                   │                                                              │                                               │
│                          ││                   │                                                              │                                               │
│                          ││                   │                                                              │                                               │
│                          ││                   └──────────────────────────────────────────────────────────────┘                                               │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          │└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
│                          │┌  Results─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                          ││[Grid] Explain  Messages                                                                                                          │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
└──────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
disconnected  Ctrl+J run  Ctrl+N new sql  Ctrl+W close                                                                                                Ctrl+P  F1
