crates/dexo-tui/tests/snapshots/sprint14_screens__settings_compact.snap
---
source: crates/dexo-tui/tests/sprint14_screens.rs
expression: "render_to_string(&model, 60, 20)"
---
default  no connection  —    1 Sidebar  [2 SQL]  3 Results  
 scratch.sql ×  +                                           
┌Settings──────────────────────────────────────────────────┐
│> Theme      [1/6  Dexo]                                  │
│  Mode       [Dark]  Light   Low color                    │
│  Accent     [Cyan]  Blue   Violet   Green   Amber   Rose │
│  Keymap     [Default]  Vim   Emacs                       │
│  Mouse      [On]  Off                                    │
│  Animation  [On]  Off                                    │
│  Unicode    [On]  Off                                    │
│  Updates    [On]  Off                                    │
│                                                          │
│  [Reset to defaults]                                     │
│  up/down row  left/right change  e theme  r reset  esc cl│
└──────────────────────────────────────────────────────────┘
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
disconnected  Ctrl+J run  Ctrl+N new sql          Ctrl+P  F1
