crates/dexo-tui/tests/snapshots/sprint14_screens__settings_full.snap
---
source: crates/dexo-tui/tests/sprint14_screens.rs
expression: "render_to_string(&model, 160, 50)"
---
default  no connection  —                                                                                                                                       
┌  Sidebar─────────────────┐ scratch.sql ×  +                                                                                                                   
│[n]ew [e]dit [a]ctions    │┌▸ SQL · scratch.sql───────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│No connections — press n  ││   1                                                                                                                              │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                   ┌Settings──────────────────────────────────────────────────────┐                                               │
│                          ││                   │> Theme      [1/6  Dexo]                                      │                                               │
│                          ││                   │  Mode       [Dark]  Light   Low color                        │                                               │
│                          ││                   │  Accent     [Cyan]  Blue   Violet   Green   Amber   Rose     │                                               │
│                          ││                   │  Keymap     [Default]  Vim   Emacs                           │                                               │
│                          ││                   │  Mouse      [On]  Off                                        │                                               │
│                          ││                   │  Animation  [On]  Off                                        │                                               │
│                          ││                   │  Unicode    [On]  Off                                        │                                               │
│                          ││                   │  Updates    [On]  Off                                        │                                               │
│                          ││                   │                                                              │                                               │
│                          ││                   │  [Reset to defaults]                                         │                                               │
│                          ││                   │  up/down row  left/right change  e theme  r reset  esc close │                                               │
│                          ││                   └──────────────────────────────────────────────────────────────┘                                               │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          │└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
│                          │┌  Results─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                          ││[Grid] Explain  Messages                                                                                                          │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
└──────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
disconnected  Ctrl+J run  Ctrl+N new sql  Ctrl+W close                                                                                                Ctrl+P  F1
