crates/dexo-tui/tests/snapshots/sprint14_screens__settings_narrow.snap
---
source: crates/dexo-tui/tests/sprint14_screens.rs
expression: "render_to_string(&model, 44, 20)"
---
default  no connection  —                   
 scratch.sql ×  +                           
┌Settings──────────────────────────────────┐
│> Theme      1/6  Dexo                    │
│  Mode       Dark                         │
│  Accent     Cyan                         │
│  Keymap     Default                      │
│  Mouse      On                           │
│  Animation  On                           │
│  Unicode    On                           │
│  Updates    On                           │
│                                          │
│  [Reset to defaults]                     │
│  arrows change  r reset  esc close       │
└──────────────────────────────────────────┘
│                                          │
│                                          │
│                                          │
└──────────────────────────────────────────┘
disconnected  Ctrl+J run          Ctrl+P  F1
